@@ -43,8 +43,11 @@ package org.jackhuang.hmcl.util;
 
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
+import org.jackhuang.hmcl.Main;
+import org.jackhuang.hmcl.ui.SwingUtils;
 import org.jackhuang.hmcl.util.io.ChecksumMismatchException;
 import org.jackhuang.hmcl.util.io.IOUtils;
+import org.jackhuang.hmcl.util.io.JarUtils;
 import org.jackhuang.hmcl.util.platform.Platform;
 
 import javax.swing.*;
@@ -55,6 +58,7 @@ import java.io.*;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.security.MessageDigest;
 import java.util.List;
 import java.util.*;
 import java.util.concurrent.CancellationException;
@@ -63,7 +67,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.stream.Collectors.toSet;
 import static org.jackhuang.hmcl.Metadata.HMCL_DIRECTORY;
-import static org.jackhuang.hmcl.util.Logging.LOG;
+import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
 import static org.jackhuang.hmcl.util.platform.JavaVersion.CURRENT_JAVA;
 
@@ -72,6 +76,8 @@ public final class SelfDependencyPatcher {
     private final List<DependencyDescriptor> dependencies = DependencyDescriptor.readDependencies();
     private final List<Repository> repositories;
     private final Repository defaultRepository;
+    private final byte[] buffer = new byte[IOUtils.DEFAULT_BUFFER_SIZE];
+    private final MessageDigest digest = DigestUtils.getDigest("SHA-1");
 
     private SelfDependencyPatcher() throws IncompatibleVersionException {
         // We can only self-patch JavaFX on specific platform.
@@ -82,14 +88,14 @@ public final class SelfDependencyPatcher {
         final String customUrl = System.getProperty("hmcl.openjfx.repo");
         if (customUrl == null) {
             if (System.getProperty("user.country", "").equalsIgnoreCase("CN")) {
-                defaultRepository = Repository.ALIYUN_MIRROR;
+                defaultRepository = Repository.TENCENTCLOUD_MIRROR;
             } else {
                 defaultRepository = Repository.MAVEN_CENTRAL;
             }
-            repositories = Collections.unmodifiableList(Arrays.asList(Repository.MAVEN_CENTRAL, Repository.ALIYUN_MIRROR));
+            repositories = Collections.unmodifiableList(Arrays.asList(Repository.MAVEN_CENTRAL, Repository.TENCENTCLOUD_MIRROR));
         } else {
             defaultRepository = new Repository(String.format(i18n("repositories.custom"), customUrl), customUrl);
-            repositories = Collections.unmodifiableList(Arrays.asList(Repository.MAVEN_CENTRAL, Repository.ALIYUN_MIRROR, defaultRepository));
+            repositories = Collections.unmodifiableList(Arrays.asList(Repository.MAVEN_CENTRAL, Repository.TENCENTCLOUD_MIRROR, defaultRepository));
         }
     }
 
@@ -98,14 +104,28 @@ public final class SelfDependencyPatcher {
         private static final Path DEPENDENCIES_DIR_PATH = HMCL_DIRECTORY.resolve("dependencies").resolve(Platform.getPlatform().toString()).resolve("openjfx");
 
         static List<DependencyDescriptor> readDependencies() {
+            ArrayList<DependencyDescriptor> dependencies;
             //noinspection ConstantConditions
             try (Reader reader = new InputStreamReader(SelfDependencyPatcher.class.getResourceAsStream(DEPENDENCIES_LIST_FILE), UTF_8)) {
-                Map<String, List<DependencyDescriptor>> allDependencies =
-                        new Gson().fromJson(reader, new TypeToken<Map<String, List<DependencyDescriptor>>>(){}.getType());
-                return allDependencies.get(Platform.getPlatform().toString());
+                Map<String, ArrayList<DependencyDescriptor>> allDependencies =
+                        new Gson().fromJson(reader, new TypeToken<Map<String, ArrayList<DependencyDescriptor>>>(){}.getType());
+                dependencies = allDependencies.get(Platform.getPlatform().toString());
             } catch (IOException e) {
                 throw new UncheckedIOException(e);
             }
+
+            if (dependencies == null) return null;
+
+            try {
+                ClassLoader classLoader = SelfDependencyPatcher.class.getClassLoader();
+                Class.forName("netscape.javascript.JSObject", false, classLoader);
+                Class.forName("org.w3c.dom.html.HTMLDocument", false, classLoader);
+            } catch (Throwable e) {
+                LOG.warning("Disable javafx.web because JRE is incomplete", e);
+                dependencies.removeIf(it -> "javafx.web".equals(it.module) || "javafx.media".equals(it.module));
+            }
+
+            return dependencies;
         }
 
         public String module;
@@ -130,7 +150,7 @@ public final class SelfDependencyPatcher {
 
     private static final class Repository {
         public static final Repository MAVEN_CENTRAL = new Repository(i18n("repositories.maven_central"), "https://repo1.maven.org/maven2");
-        public static final Repository ALIYUN_MIRROR = new Repository(i18n("repositories.aliyun_mirror"), "https://maven.aliyun.com/repository/central");
+        public static final Repository TENCENTCLOUD_MIRROR = new Repository(i18n("repositories.tencentcloud_mirror"), "https://mirrors.cloud.tencent.com/nexus/repository/maven-public");
 
         private final String name;
         private final String url;
@@ -230,7 +250,7 @@ public final class SelfDependencyPatcher {
             }
         } else {
             LOG.info("User choose not to download JavaFX");
-            System.exit(0);
+            Main.exit(0);
         }
         throw new AssertionError();
     }
@@ -252,7 +272,9 @@ public final class SelfDependencyPatcher {
                 .map(DependencyDescriptor::localPath)
                 .toArray(Path[]::new);
 
-        JavaFXPatcher.patch(modules, jars);
+        String[] addOpens = JarUtils.getManifestAttribute("Add-Opens", "").split(" ");
+
+        JavaFXPatcher.patch(modules, jars, addOpens);
     }
 
     /**
@@ -261,9 +283,10 @@ public final class SelfDependencyPatcher {
      * @throws IOException When the files cannot be fetched or saved.
      */
     private void fetchDependencies(List<DependencyDescriptor> dependencies) throws IOException {
+        SwingUtils.initLookAndFeel();
+
         boolean isFirstTime = true;
 
-        byte[] buffer = new byte[IOUtils.DEFAULT_BUFFER_SIZE];
         Repository repository = defaultRepository;
 
         int count = 0;
@@ -360,8 +383,18 @@ public final class SelfDependencyPatcher {
         return missing;
     }
 
-    private static void verifyChecksum(DependencyDescriptor dependency) throws IOException, ChecksumMismatchException {
-        ChecksumMismatchException.verifyChecksum(dependency.localPath(), "SHA-1", dependency.sha1());
+    private void verifyChecksum(DependencyDescriptor dependency) throws IOException, ChecksumMismatchException {
+        digest.reset();
+        try (InputStream is = Files.newInputStream(dependency.localPath())) {
+            int read;
+            while ((read = is.read(buffer, 0, IOUtils.DEFAULT_BUFFER_SIZE)) > -1) {
+                digest.update(buffer, 0, read);
+            }
+        }
+
+        String sha1 = Hex.encodeHex(digest.digest());
+        if (!dependency.sha1().equalsIgnoreCase(sha1))
+            throw new ChecksumMismatchException("SHA-1", dependency.sha1(), sha1);
     }
 
     public static class PatchException extends Exception {
